# DrewGraphics

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .syntastic_cpp_config  CMakeLists.txt  DrewGraphics.sln  DrewGraphics.vcxproj  DrewGraphics.vcxproj.filters  ImageFader.sln  README.md  make_and_run_portal.sh  stripopengl.sh
CaVR/: .editorconfig  CMakeLists.txt  CaVR.vcxproj  CaVR.vcxproj.filters
CaVR/assets/shaders/Cave/: CavePixelShader.hlsl  CaveShared.hlsli  CaveVertexShader.hlsl
CaVR/assets/shaders/IntersectionDownscale/: IntersectionDownscalePixelShader.hlsl  IntersectionDownscaleShared.hlsli  IntersectionDownscaleVertexShader.hlsl
CaVR/assets/shaders/SphereIntersection/: SphereIntersectionPixelShader.hlsl  SphereIntersectionShared.hlsli  SphereIntersectionVertexShader.hlsl
CaVR/include/cavr/: Cave.h  CavrEngine.h
CaVR/include/cavr/behaviors/: CaveBehavior.h  ShipBehavior.h
CaVR/include/cavr/materials/: IntersectionDownscaleMaterial.h  SphereIntersectionMaterial.h
CaVR/include/cavr/scenes/: CaveTestScene.h  GameScene.h
CaVR/src/: Cave.cpp  CavrEngine.cpp  main.cpp
CaVR/src/behaviors/: CaveBehavior.cpp  ShipBehavior.cpp
CaVR/src/materials/: IntersectionDownscaleMaterial.cpp  SphereIntersectionMaterial.cpp
CaVR/src/scenes/: CaveTestScene.cpp  GameScene.cpp
Engine/: .gitignore  .syntastic_cpp_config  CMakeLists.txt  DrewGraphics.vcxproj  Engine.vcxproj  Engine.vcxproj.filters
Engine/assets/shaders/: ScreenQuadPixelShader.hlsl  ScreenQuadVertexShader.hlsl  StandardPixelShader.hlsl  UVVertexShader.hlsl  depthreset.f.glsl  depthreset.v.glsl  screenquad.f.glsl  screenquad.v.glsl  skybox.f.glsl  skybox.v.glsl  solidcolor.f.glsl  standard.f.glsl  standard.v.glsl  uv.f.glsl
Engine/assets/shaders/includes/: fragment_head.glsl  fragment_main.glsl  shared_head.glsl  vertex_head.glsl
Engine/include/dg/: Camera.h  Canvas.h  Cubemap.h  Engine.h  Exceptions.h  FileUtils.h  FrameBuffer.h  Graphics.h  Image.h  Lights.h  Material.h  Mesh.h  Model.h  Preprocessor.h  RasterizerState.h  RasterizerStateAttributes.def  Scene.h  SceneObject.h  Shader.h  ShaderReplacedMaterial.h  Skybox.h  Texture.h  Utils.h  Window.h
Engine/include/dg/KHR/: khrplatform.h
Engine/include/dg/behaviors/: KeyboardLightController.h  RotateBehavior.h
Engine/include/dg/directx/: SimpleShader.h
Engine/include/dg/materials/: ScreenQuadMaterial.h  StandardMaterial.h  UVMaterial.h
Engine/include/dg/opengl/: ShaderSource.h
Engine/include/dg/opengl/glad/: glad.h
Engine/include/dg/scenes/: TexturesScene.h
Engine/include/dg/vr/: VRControllerState.h  VRManager.h  VRTrackedObject.h
Engine/src/: Camera.cpp  Canvas.cpp  CanvasScene.cpp  Cubemap.cpp  Engine.cpp  EngineTime.cpp  FileUtils.cpp  FrameBuffer.cpp  Graphics.cpp  Image.cpp  Material.cpp  Mesh.cpp  Model.cpp  Preprocessor.cpp  RasterizerState.cpp  Scene.cpp  SceneObject.cpp  Shader.cpp  ShaderReplacedMaterial.cpp  Skybox.cpp  Texture.cpp  Transform.cpp  Utils.cpp  Window.cpp  main.cpp
Engine/src/behaviors/: KeyboardCameraController.cpp  KeyboardLightController.cpp  RotateBehavior.cpp
Engine/src/directx/: DXUtils.cpp
Engine/src/materials/: ScreenQuadMaterial.cpp  StandardMaterial.cpp  UVMaterial.cpp
Engine/src/opengl/: ShaderSource.cpp  glad.c
Engine/src/scenes/: BoundsScene.cpp  CanvasTestScene.cpp  DeepCloningScene.cpp  MeshesScene.cpp  QuadScene.cpp  SimpleScene.cpp  TransparencyScene.cpp
Engine/src/vr/: VRControllerState.cpp  VRManager.cpp  VRRenderModel.cpp  VRTrackedObject.cpp  VRUtils.cpp
Experiments/: .syntastic_cpp_config  CMakeLists.txt  Experiments.vcxproj  Experiments.vcxproj.filters
Experiments/src/: main.cpp
HelloGlfw/: .gitignore  CMakeLists.txt  README.md  make_and_run_portal.sh  make_and_run_tutorial.sh
HelloGlfw/assets/shaders/: depthreset.f.glsl  depthreset.v.glsl  shader.f.glsl  shader.v.glsl  simpletexture.f.glsl  simpletexture.v.glsl  solidcolor.f.glsl  solidcolor.v.glsl  standard.f.glsl  tutorialshader.f.glsl  tutorialshader.v.glsl
HelloGlfw/assets/shaders/includes/: fragment_head.glsl  fragment_main.glsl  vertex_head.glsl  vertex_main.glsl
HelloGlfw/include/: Camera.h  EngineTime.h  Material.h  Mesh.h  Model.h  PortalScene.h  Scene.h  Shader.h  ShaderSource.h  StandardMaterial.h  Texture.h  Transform.h  TutorialScene.h  Window.h
HelloGlfw/include/glad/: glad.h
HelloGlfw/include/materials/: StandardMaterial.h
HelloGlfw/include/scenes/: TutorialScene.h
HelloGlfw/src/: Camera.cpp  EngineTime.cpp  FileUtils.cpp  Material.cpp  Mesh.cpp  Model.cpp  PortalScene.cpp  SceneObject.cpp  Shader.cpp  ShaderSource.cpp  StandardMaterial.cpp  Texture.cpp  Transform.cpp  TutorialScene.cpp  Window.cpp  glad.c  main.cpp
HelloGlfw/src/scenes/: PortalScene.cpp
ImageFader/: .gitignore  ImageFader.vcxproj  ImageFader.vcxproj.filters  Main.cpp  frustum-rotation.v.glsl  hello-gl.v.glsl  main.cpp  naive-rotation.v.glsl  orthographic-rotation.v.glsl  perspective-rotation.v.glsl  rotate-z.v.glsl  util.cpp
ImageFader.xcodeproj/: project.pbxproj
ImageFader.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ImageFader/ImageFader.xcodeproj/: project.pbxproj
ImageFader/include/: Shader.h  ShaderSource.h
ImageFader/src/: Shader.cpp  ShaderSource.cpp
assets/shaders/: StandardPixelShader.hlsl  StandardVertexShader.hlsl  UVPixelShader.hlsl  checkerboard.f.glsl  hello-gl.f.glsl  uv.f.glsl  (+4 more)
include/: Behavior.h  Camera.h  Canvas.h  CanvasScene.h  EngineTime.h  Exceptions.h  FrameBuffer.h  Graphics.h  InputCodes.h  Light.h  Lights.h  Material.h  MathUtils.h  Mesh.h  Model.h  PointLight.h  Scene.h  SceneObject.h  Shader.h  ShaderSource.h  Skybox.h  Texture.h  Transform.h  Window.h  file_util.h  util.h
src/: Behavior.cpp  Camera.cpp  Canvas.cpp  CanvasScene.cpp  Engine.cpp  EngineTime.cpp  FrameBuffer.cpp  Graphics.cpp  Light.cpp  Lights.cpp  Material.cpp  MathUtils.cpp  Mesh.cpp  Model.cpp  PointLight.cpp  RasterizerState.cpp  Scene.cpp  SceneObject.cpp  Shader.cpp  ShaderSource.cpp  Skybox.cpp  Texture.cpp  Transform.cpp  Utils.cpp  Window.cpp  file_util.cpp  glad.c  main.cpp  util.cpp
(+191 files in other folders)
